--- a/style.css
+++ b/style.css
@@ -1,12 +1,9 @@
-html {
-    scroll-behavior: smooth;
-}
-
 body {
     background-color: white;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    width: 100%;
 }
 
 /* HEADER/NAVBAR */
@@ -60,14 +57,27 @@ header .logo a {
     padding: 0;
     height: 100%;
     width: 100%;
-    background: linear-gradient(-135deg, white, #214ED3);
-    clip-path: circle(25px at calc(100% - 85px) 35px);
+    background: rgba(0, 0, 0, 0.8);
+    clip-path: circle(20px at calc(100% - 85px) 35px);
+    -webkit-clip-path: circle(20px at calc(100% - 85px) 35px);
+    -moz-clip-path: circle(20px at calc(100% - 85px) 35px);
+    -o-clip-path: circle(20px at calc(100% - 85px) 35px);
     transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
     display: none;
 }
 
 #active:checked ~ .mobiledrop {
     clip-path: circle(75%);
+    -webkit-clip-path: circle(75%);
+    -moz-clip-path: circle(75%);
+    -o-clip-path: circle(75%);
+}
+
+#active:checked ~ .mobiledrop ul {
+    display: inline;
 }
 
 .menubtn {
@@ -88,10 +98,14 @@ header .logo a {
 }
 
 .mobiledrop ul {
+    display: none;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
     text-align: center;
     list-style-type: none;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -102,38 +116,25 @@ header .logo a {
 }
 
 .mobiledrop ul li a {
-    color: black;
+    color: white;
     text-decoration: none;
     font-size: 20px;
     padding: 5px 50px;
     position: relative;
     line-height: 35px;
     transition: all 0.3s ease;
-}
-
-.mobiledrop ul li a:after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 35px;
-    background: white;
-    left: 0;
-    border-radius: 30px;
-    transform: scaleY(0);
-    z-index: -1;
-    transition: transform 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
 }
 
 .mobiledrop ul li a:hover {
-    color: black;
+    color: white;
+    font-weight: 900;
 }
 
 input {
     display: none;
-}
-
-.mobiledrop ul li a:hover:after {
-    transform: scaleY(1);
 }
 
 @media only screen and (max-width: 976px) {
@@ -158,10 +159,16 @@ input {
 
     .mobiledrop {
         display: block;
-    }
+    } 
 
     .menubtn {
         display: block;
+    }
+}
+
+@media only screen and (max-width: 280px) {
+    header .logo img {
+        width: 150px;
     }
 }
 
@@ -237,13 +244,15 @@ input {
     margin-right: 0px;
     text-align: center;
     box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .introduction h1 {
     font-size: 100px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: white;
-    padding-top: 400px;
 }
 
 .introduction h3 {
@@ -289,81 +298,99 @@ input {
     display: grid;
     height: 100%;
     width: 100%;
-    box-sizing: border-box;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    padding-top: 30px;
+    place-items: center;
+    padding-top: 40px;
+}
+
+.wrapper {
+    display: inline-flex;
+}
+
+.wrapper .icon {
+    margin: 0 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+    cursor: pointer;
+    transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    -webkit-transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    -moz-transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    -o-transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
 .wrapper a {
-    text-decoration: none;
-}
-
-.wrapper .button {
-    display: inline-block;
-    height: 60px;
-    width: 60px;
-    margin: 0 20px;
-    overflow: hidden;
-    background: white;
-    border-radius: 50px;
-    cursor: pointer;
-    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    transition: all 0.3s ease-out;
-}
-
-.wrapper .button:hover {
-    width: 165px;
-}
-
-.wrapper .button .icon {
-    display: inline-block;
-    height: 60px;
-    width: 60px;
-    border-radius: 50px;
-    box-sizing: border-box;
-    line-height: 60px;
-    transition: all 0.3s ease-out;
     color: black;
 }
 
-.wrapper a:nth-child(1) .button:hover .icon {
-    background: #2867B2; 
-    float: left;
+.wrapper .icon span {
+    position: relative; 
+    height: 60px;
+    width: 60px;
+    display: block;
+    background: white;
+    text-align: center;
+    border-radius: 50%;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    box-shadow: 0 10px 10px rgba(0,0,0,0.1);
 }
 
-.wrapper a:nth-child(2) .button:hover .icon {
-    background: #E1306C;
-    float: left;
-}
-
-.wrapper .button .icon i {
-    font-size: 25px; 
+.wrapper .icon span i {
+    font-size: 25px;
     line-height: 60px;
-    transition: all 0.3s ease-out;
 }
 
-.wrapper .button:hover .icon i {
+.wrapper .icon:hover span {
     color: white;
 }
 
-.wrapper .button span {
-    font-size: 20px; 
-    font-weight: 500; 
-    line-height: 60px;
-    margin-left: 10px;
-    transition: all 0.3s ease-out;
+.wrapper .icon .tooltip {
+    position: absolute;
+    top: 0px;
+    background: white;
+    color: white;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 20px;
+    padding: 10px 18px;
+    border-radius: 25px;
+    box-shadow: 0 10px 10px rgba(0,0,0,0.1);
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    -webkit-transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    -moz-transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    -o-transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
-.wrapper a:nth-child(1) .button span {
-    float: left;
-    color: #2867B2;
+.wrapper .icon:hover .tooltip {
+    top: -70px;
+    opacity: 1;
+    pointer-events: auto;
 }
 
-.wrapper a:nth-child(2) .button span {
-    margin-right: 20px;
-    color: #E1306C;
+.wrapper .icon .tooltip:before {
+    position: absolute;
+    content: "";
+    height: 15px;
+    width: 15px;
+    background: white;
+    bottom: -8px;
+    left: 50%;
+    transform: translateX(-50%) rotate(45deg);
 }
+
+.wrapper .icon:hover span, .wrapper .icon:hover .tooltip {
+    text-shadow: 0px -1px 0px rgba(0,0,0,0.4);
+}
+
+.wrapper .linkedin:hover span, .wrapper .linkedin:hover .tooltip, .wrapper .linkedin:hover .tooltip:before {
+    background: #2867b2;
+} 
+
+.wrapper .email:hover span, .wrapper .email:hover .tooltip, .wrapper .email:hover .tooltip:before {
+    background: #e1306c;
+} 
 
 /* ABOUT */
 
@@ -372,6 +399,7 @@ input {
     padding-top: 150px;
     top: -70px;
     position: relative;
+    margin-bottom: 200px;
 }
 
 .abouttitle {
@@ -387,21 +415,29 @@ input {
 
 section {
     width: 100%;
+    margin-top: 80px;
     text-align: center;
-    display:flex;
+}
+
+.aboutinfo {
+    width: 1300px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-between;
-    margin-top: 80px;
 }
 
 section .profilepic {
-    margin-left: 25%;
+    width: 375px;
+    height: 500px;
+    background: url(images/IMG_1976.JPG);
+    background-size: cover;
 }
 
-section .about {
-    width: 21%;
-    height: 500px;
+.aboutinfo .about {
+    width: 43%;
     background-color: white;
 } 
 
@@ -421,10 +457,8 @@ section .about p {
 }
 
 section .skills {
-    width: 9%;
-    height: 500px;
+    width: 23%;
     background-color: white;
-    margin-right: 25%;
 }
 
 .skills h3 {
@@ -442,15 +476,160 @@ section .skills {
     padding: 4px 0;
 }
 
+.mobileabout {
+    display: none;
+    margin-left: auto;
+    margin-right: auto;
+    width: 300px;
+    margin-top: 0px;
+}
+
+.mobileprofilepic {
+    width: 300px;
+    height: 400px;
+    background: url(images/IMG_1976.JPG);
+    background-size: cover;
+}
+
+.mobileaboutdes h3 {
+    font-size: 20px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.mobileaboutdes p {
+    font-size: 15px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.mobileskills h3 {
+    font-size: 20px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.mobileskills p {
+    font-size: 15px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+    list-style-type: none;
+    line-height: 10px;
+}
+
+@media only screen and (max-width: 1330px) {
+    .aboutinfo {
+        width: 1200px;
+    }
+}
+
+@media only screen and (max-width: 1240px) {
+    .aboutinfo {
+        width: 1100px;
+    }
+}
+
+@media only screen and (max-width: 1150px) {
+    .aboutinfo {
+        width: 1000px;
+    }
+}
+
+@media only screen and (max-width: 1040px) {
+    .aboutinfo {
+        width: 880px;
+    }
+}
+
+@media only screen and (max-width: 915px) {
+    .abouttitle {
+        font-size: 40px;
+        width: 300px;
+    }
+
+    section .profilepic {
+        width: 300px;
+        height: 400px;
+    }
+
+    section .about h3 {
+        font-size: 20px;
+    }
+
+    section .about p {
+        font-size: 15px;
+    }
+
+    .skills h3 {
+        font-size: 20px;
+    }
+
+    .skills ul li {
+        font-size: 15px;
+    }
+}
+
+@media only screen and (max-width: 895px) {
+    .aboutinfo {
+        width: 750px;
+    }
+}
+
+@media only screen and (max-width: 775px) {
+    .aboutinfo {
+        width: 650px;
+    }
+}
+
+@media only screen and (max-width: 665px) {
+    .aboutinfo{
+        width: 550px;
+        margin-bottom: 0px;
+    }
+
+    .aboutinfo, section .profilepic, section .about h3, section .about p, .skills h3, .skills ul li, section .about, section .skills {
+        display: none;
+    }
+
+    .mobileabout {
+        display: block;
+    }
+}
+
+@media only screen and (max-width: 515px) {
+    .aboutinfo {
+        width: 400px;
+    }
+}
+
+@media only screen and (max-width: 415px) {
+    .aboutinfo {
+        width: 300px;
+    }
+}
+
+@media only screen and (max-width: 280px) {
+    .mobileabout {
+        width: 180px;
+    }
+
+    .mobileprofilepic {
+        width: 180px;
+        height: 240px;
+    }
+
+    .abouttitle {
+        width: 200px;
+        font-size: 30px;
+    }
+}
+
 /* EDUCATION */
+.height70 {
+    width: 100%;
+    height: 70px;
+}
 
 .education {
     width: 100%; 
     background-color: #f2f0e6;
-    position: relative;
-    margin: 0;
-    margin-top: 200px;
-    scroll-margin-top: 70px;
 }
 
 .education .educationtitle {
@@ -461,6 +640,7 @@ section .skills {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 60px;
     padding-top: 80px;
+    margin-bottom: 40px;
     text-align: center;
     border-bottom: 2px solid black;
 }
@@ -469,12 +649,9 @@ section .skills {
     width: 1300px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 80px;
+    margin-top: 0px;
 }
 
-.university {
-    height: 400px;
-}
 
 .educationsub .university .unidescription {
     width: 100%;
@@ -543,9 +720,8 @@ section .skills {
 }
 
 .highschool {
-    height: 300px;
-    margin-top: 20px;
-    padding-bottom: 60px;
+    margin-top: 40px;
+    padding-bottom: 90px;
 }
 
 .education .highschool .hsdescription {
@@ -578,29 +754,25 @@ section .skills {
     line-height: 25px;
 }
 
-@media only screen and (max-width: 1303px) {
+@media only screen and (max-width: 1315px) {
     .educationsub {
         width: 1200px;
     }
 }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1215px) {
     .educationsub {
         width: 1100px;
     }
 }
 
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 1115px) {
     .educationsub {
         width: 1000px;
     }
-
-    .highschool {
-        margin-top: 50px;
-    }
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1015px) {
     .educationsub {
         width: 900px;
     }
@@ -618,7 +790,7 @@ section .skills {
     }
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 915px) {
     .education .educationtitle {
         font-size: 40px;
         width: 300px;
@@ -627,10 +799,6 @@ section .skills {
     .educationsub {
         margin-top: 30px;
         width: 800px;
-    }
-
-    .highschool {
-        margin-top: 0px;
     }
 
     .unidescription h3, .hsdescription h3 {
@@ -646,17 +814,17 @@ section .skills {
     }
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 815px) {
     .educationsub {
         width: 700px;
     }
 
-    .highschool {
-        margin-top: 60px;
+    .education {
+        margin-top: 120px;
     }
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 715px) {
     .educationsub {
         width: 600px;
     }
@@ -669,18 +837,51 @@ section .skills {
         display: block;
     }
 
-    .highschool {
-        margin-top: 150px;
+    .education {
+        margin-top: 100px;
     }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 650px) {
+    .education {
+        margin-top: 80px;
+    }
+}
+
+@media only screen and (max-width: 615px) {
     .educationsub {
         width: 500px;
     }
+}
+
+@media only screen and (max-width: 515px) {
+    .educationsub {
+        width: 480px;
+    }
+}
+
+@media only screen and (max-width: 415px) {
+    .educationsub {
+        width: 300px;
+    }
+
+    .hsdescription p {
+        padding-bottom: 30px;
+    }
+}
+
+@media only screen and (max-width: 280px) {
+    .educationsub {
+        width: 200px;
+    }
+
+    .education .educationtitle {
+        font-size: 30px;
+        width: 200px;
+    }
 
     .highschool {
-        margin-top: 220px;
+        margin-top: 40px;
     }
 }
 
@@ -689,16 +890,17 @@ section .skills {
 .projects {
     width: 100%; 
     background-color: white;
-    scroll-margin-top: 70px;    
+    padding-top: -70px;
+    margin-top: 10px;  
 }
 
 .projectstitle {
-    padding-top: 80px;
     padding-bottom: 20px;
     margin: 0;
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 80px;
+    padding-top: 80px;  
     text-align: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 60px;
@@ -963,7 +1165,7 @@ section .skills {
     }
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 915px) {
     .projectstitle {
         font-size: 40px;
         width: 300px;
@@ -986,9 +1188,9 @@ section .skills {
     }
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 815px) {
     .projectlist {
-        width: 400px;
+        width: 700px;
     }
 
     .projectstitle {
@@ -1007,6 +1209,49 @@ section .skills {
         display: block;
     }
 }
+
+@media only screen and (max-width: 715px) {
+    .projectlist {
+        width: 600px;
+    }
+}
+
+@media only screen and (max-width: 615px) {
+    .projectlist {
+        width: 500px;
+    }
+}
+
+@media only screen and (max-width: 515px) {
+    .projectlist {
+        width: 400px;
+    }
+
+    .projects {
+        margin-top: 110px;
+    }
+}
+
+@media only screen and (max-width: 415px) {
+    .projects {
+        margin-top: 0px;
+    }
+
+    .projectlist {
+        width: 300px;
+    }
+}
+
+@media only screen and (max-width: 280px) {
+    .projectlist {
+        width: 180px;
+    }
+
+    .projectstitle {
+        font-size: 30px;
+        width: 200px;
+    }
+} 
 
 /* FOOTER */
 
@@ -1080,5 +1325,17 @@ footer p {
 
     .footernav {
         font-size: 12px;
+    }
+}
+
+@media only screen and (max-width: 415px) {
+    .footernav {
+        font-size: 10px;
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    .footernav {
+        font-size: 9px;
     }
 }
