--- a/korean.css
+++ b/korean.css
@@ -63,6 +63,9 @@ header .logo a {
     -moz-clip-path: circle(20px at calc(100% - 85px) 35px);
     -o-clip-path: circle(20px at calc(100% - 85px) 35px);
     transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
     display: none;
 }
 
@@ -71,6 +74,10 @@ header .logo a {
     -webkit-clip-path: circle(75%);
     -moz-clip-path: circle(75%);
     -o-clip-path: circle(75%);
+}
+
+#active:checked ~ .mobiledrop ul {
+    display: inline;
 }
 
 .menubtn {
@@ -91,6 +98,7 @@ header .logo a {
 }
 
 .mobiledrop ul {
+    display: none;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -100,6 +108,7 @@ header .logo a {
     -o-transform: translate(-50%, -50%);
     text-align: center;
     list-style-type: none;
+    list-style-position: inside;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
@@ -115,6 +124,9 @@ header .logo a {
     position: relative;
     line-height: 35px;
     transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
 }
 
 .mobiledrop ul li a:hover {
@@ -152,6 +164,19 @@ input {
 
     .menubtn {
         display: block;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .menubtn {
+        right: 25px;
+    }
+
+    .mobiledrop {
+        clip-path: circle(20px at calc(100% - 50px) 35px);
+        -webkit-clip-path: circle(20px at calc(100% - 50px) 35px);
+        -moz-clip-path: circle(20px at calc(100% - 50px) 35px);
+        -o-clip-path: circle(20px at calc(100% - 50px) 35px);
     }
 }
 
@@ -307,6 +332,10 @@ input {
     -webkit-transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     -moz-transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     -o-transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.wrapper a {
+    color: black;
 }
 
 .wrapper .icon span {
@@ -555,11 +584,19 @@ section .skills {
     .aboutinfo {
         width: 750px;
     }
+
+    .aboutsection {
+        margin-bottom: 80px;
+    }
 }
 
 @media only screen and (max-width: 775px) {
     .aboutinfo {
         width: 650px;
+    }
+
+    .aboutsection {
+        margin-bottom: 0px;
     }
 }
 
@@ -607,6 +644,10 @@ section .skills {
 }
 
 /* EDUCATION */
+.height70 {
+    width: 100%;
+    height: 70px;
+}
 
 .education {
     width: 100%; 
@@ -799,10 +840,6 @@ section .skills {
     .educationsub {
         width: 700px;
     }
-
-    .education {
-        margin-top: 120px;
-    }
 }
 
 @media only screen and (max-width: 715px) {
@@ -810,14 +847,12 @@ section .skills {
         width: 600px;
     }
 
-    .education {
-        margin-top: 100px;
+    .mobile h4, .mobile h5 {
+        display: none;
     }
-}
 
-@media only screen and (max-width: 650px) {
-    .education {
-        margin-top: 80px;
+    .mobile2 h4 {
+        display: block;
     }
 }
 
