--- a/style.css
+++ b/style.css
@@ -102,6 +102,8 @@ header .logo a {
     position: absolute;
     top: 50%;
     left: 50%;
+    width: 100%;
+    padding: 0;
     transform: translate(-50%, -50%);
     -webkit-transform: translate(-50%, -50%);
     -moz-transform: translate(-50%, -50%);
@@ -112,6 +114,7 @@ header .logo a {
 }
 
 .mobiledrop ul li {
+    width: 100%;
     margin: 40px 0;
 }
 
@@ -1081,18 +1084,6 @@ section .skills {
     font-size: 18px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding: 10px 20px;
-}
-
-.accordian-item:target .projectdescription {
-    max-height: 1500px; 
-}
-
-.accordian-item:target .accordian-link .fa-plus {
-    display: none;
-}
-
-.accordian-item:target .accordian-link .fa-minus {
-    display: block;
 }
 
 @media only screen and (max-width: 1500px) {
